# research-surreal

./: CLAUDE.md  LICENSE  README.md  REDIS_STREAMS_MONITORING.md  docker-compose.override.yml  docker-compose.yml  migration_to_rabbitmq.md  rindexer.yaml  surrealdb-schema.surql
.github/workflows/: monitoring-validation.yml  postgres-writer-tests.yml
abi/: Multivault-v-2-0.json
docker/: .env  docker-compose.override.yml  docker-compose.yml  restart-syncs.sh  restart-writers.sh
docs/runbooks/: database-spike.md  event-type-failures.md  no-events.md  slow-cascade-processing.md  slow-event-processing.md
example-web-app/: .env.local  Dockerfile  package-lock.json  package.json
example-web-app/app/: layout.tsx  page.tsx
example-web-app/lib/: surrealdb.ts
infrastructure/drizzle/: Dockerfile  drizzle.config.ts  package.json
infrastructure/monitoring/: README.md  alert_rules.yml  alertmanager.yml  prometheus.yml  recording_rules.yml
infrastructure/redis/: redis.conf
jupiter/: .dockerignore  .env.local  next.config.js  package-lock.json  package.json
jupiter/app/: layout.tsx  page.tsx
jupiter/lib/: surrealdb.ts
monitoring/: prometheus.yml
postgres-writer/: .env.example  Cargo.toml  Dockerfile  README.md  TESTING_PROPOSAL.md  issues.md  plan.md  report.md
postgres-writer/.sqlx/: query-1e45c9668a26184480a37a8fe8aab86186047e5857119f19187d80f34e2d5108.json  query-279bc15a56075d48f4bf0ce872e3dde26f07d895665771b0e15dfc1360120894.json  query-2990d79ceaed5ba1a994cbd9e501fa8b32573b3f3f1d06cae911218bc12497e2.json  query-38eca701972c2ac1b5a12ad802a2b3d431d21948148493d1b1f4f07ee813fa31.json  query-782b4a46dd0d1e3ea120c90ade3bcb857920450f296d50f844a6182918ee1106.json  query-931115f348b7d0670ba06154460f9f93704583e6304917aa7e335de1fbba4437.json  query-981927d359130358f1b8888d1ea75a68ed445313fadee588313696ca2679eed1.json  query-a0debc9f23cee7759c30adceb7c904d464bb1d17779a8000c78fd97466b118c0.json  query-ae716a83a8192c4c1ead5e5dc415b16663aa25a1c44a818ce33a5cabca02c473.json  query-b1f5d6fe3333eb3447292fb48044b044bab283b388e18e35150566f5ddf0453f.json  query-c18815bb0935b7e2be28c55b7f2823731bd4694bf3c35cf080554b9b1feca3fd.json  query-d2dbce16688e5b7dc47e68ecb62d890222152c1d4ad500b05ca2d4c3cf54b7de.json  query-e5f462f024de4793f4651888d1d77b51fdd8db746bd300b7006b254826cd2b82.json  query-f37d8c65e3b4c96bfa582d599b8a3f7901a1e54bdfc0f630cc89f935901f9eaf.json
postgres-writer/migrations/: 20250130000001_initial_schema.sql  20250130000002_position_view.sql  20250130000003_vault_view.sql  20250130000004_term_view.sql  20250130000005_atom_view.sql  20250130000006_triple_view.sql  20250130000007_triple_vault_view.sql  20250130000008_triple_term_view.sql  20250130000009_predicate_aggregates.sql  20250130000010_refresh_utilities.sql  20250131000001_drop_materialized_views.sql  20250131000002_create_regular_tables.sql  20250131000003_create_triggers.sql  20250131000004_snapshot_comparison.sql  (+3 more)
redis/: redis.conf
redis-postgres-sync/: .env.example  BUILD_NOTES.md  Cargo.toml  Dockerfile  README.md  TESTING_PROPOSAL.md  TRIGGER_REFACTOR.md
redis-postgres-sync/migrations/: 20250130000001_initial_schema.sql  20250130000002_position_view.sql  20250130000004_term_view.sql  20250130000005_atom_view.sql  20250130000007_triple_vault_view.sql  20250130000008_triple_term_view.sql  20250130000009_predicate_aggregates.sql  20250131000001_drop_materialized_views.sql  20250131000002_create_regular_tables.sql  20250131000003_create_triggers.sql
redis-postgres-sync/src/: config.rs  http_server.rs  lib.rs  main.rs
redis-postgres-sync/src/analytics/: mod.rs  processor.rs  worker.rs
redis-postgres-sync/src/consumer/: redis_publisher.rs  redis_stream.rs
redis-postgres-sync/src/core/: circuit_breaker.rs  pipeline.rs  types.rs
redis-postgres-sync/src/monitoring/: metrics.rs  mod.rs
redis-postgres-sync/src/processors/: cascade.rs  mod.rs  term_updater.rs  vault_updater.rs
redis-postgres-sync/src/sync/: atom_created.rs  deposited.rs  event_handlers.rs  mod.rs  postgres_client.rs  redeemed.rs  share_price_changed.rs  triple_created.rs  utils.rs
redis-postgres-sync/tests/: integration_tests.rs
redis-postgres-sync/tests/helpers/: db_assertions.rs  mock_events.rs  mod.rs  test_harness.rs
redis-postgres-sync/tests/integration/: analytics_pipeline.rs  concurrent_updates.rs  out_of_order.rs
redis-surreal-sync/: .dockerignore  Cargo.toml  Dockerfile
redis-surreal-sync/src/: config.rs  error.rs  main.rs
redis-surreal-sync/src/core/: mod.rs
redis-surreal-sync/src/monitoring/: health.rs  metrics.rs
redis-surreal-sync/src/sync/: deposited.rs  event_handlers.rs  mod.rs  redeemed.rs  surreal_client.rs  triple_created.rs
rindexer/: Dockerfile  rindexer.yaml
surreal-writer/: .gitignore  Cargo.toml  Dockerfile
(+77 files in other folders)
