[package]
name = "redis-postgres-sync"
version = "0.1.0"
edition = "2021"
authors = ["Simonas"]
description = "High-performance Redis to PostgreSQL event synchronization pipeline"
license = "MIT OR Apache-2.0"

[[bin]]
name = "redis-postgres-sync"
path = "src/main.rs"

[dependencies]
# Redis client with async support
redis = { version = "0.27", features = ["tokio-comp", "streams"] }

# PostgreSQL client with async support and migrations
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

# Configuration
clap = { version = "4.0", features = ["derive"] }

# Signal handling and shutdown
tokio-util = "0.7"

# Circuit breaker and reliability patterns
futures = "0.3"
thiserror = "1.0"

# Metrics and monitoring
dashmap = "5.0"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# HTTP server for health and metrics endpoints
warp = "0.3"

# System information
num_cpus = "1.0"
hex = "0.4.3"

# Ethereum utilities
alloy-primitives = "0.8"

[dev-dependencies]
# Test containers for isolated environments
testcontainers = "0.21"
testcontainers-modules = { version = "0.9", features = ["redis", "postgres"] }

# Test utilities
tokio-test = "0.4"
serial_test = "3.0"
rstest = "0.22"

# Mock data generation
fake = { version = "2.9", features = ["derive", "chrono"] }

# Better assertions
assert2 = "0.3"
similar-asserts = "1.5"
